--- a/atlas/atlas.conf
+++ b/atlas/atlas.conf
@@ -1,7 +1,7 @@
 # ATLAS configuration file
 
 # Standard output directory, supports UNC pathing for NFS shares
-output_dir=/mnt/external/results
+output_dir=
 
 # Optional variable to override hostname, if expected output is different than $HOSTNAME environment variable
 host_override=
